--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".NextPageActivity">
+            <!-- Optionally, you can define other attributes -->
+        </activity>
     </application>
 
 </manifest>
