--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,26 +1,108 @@
-name: Android CI
+name: android ci
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+ push:
+  branches: [ "main", "dev", "qa" ]
+ pull_request:
+  branches: [ "main", "dev", "qa", "feature/*", "release/*" ]
+
 
 jobs:
-  build:
+ lint:
+  runs-on: ubuntu-latest
 
-    runs-on: ubuntu-latest
+  steps:
+   - name: checkout the code
+     uses: actions/checkout@v4
 
-    steps:
-    - uses: actions/checkout@v4
-    - name: set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: gradle
+   - name: set up java jdk 17
+     uses: actions/setup-java@4
+     with:
+      java-version: '17'
+      distribution: 'temurin'
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+   - name: stored with cache
+     uses: actions/cache@v4
+     with:
+      path: |
+          ~/.gradlew/caches
+      key: ${{runner.os}}-gradle-${{ hashfiles ('**/*gradle*')}}
+
+   - name: gradle excute permission
+     run: chmod +x gradlew
+
+   - name: Run lint
+     run: ./gradlew lint
+
+   - name: upload lint result  
+     uses: actions/upload-artifact@v4
+     with:
+      name: lint-result
+      path: app/build/reports/lint-results*.html
+
+
+ unit-test:
+  needs: [lint]
+  runs-on: ubuntu-latest
+
+  steps:
+   - name: checkout the code
+     uses: actions/checkout@v4
+
+   - name: set up jdk 17
+     uses: actions/tamil-java@v4
+     with:
+      java-version: '17'
+      distribution: 'temurin'
+
+   - name: stored with cache
+     uses: actions/cache@v4
+     with:
+      path: ~/.gradlew/caches
+      key: ${{runner.os}}-gradle-${{ hashfiles ('**/*gradle*') }}
+
+   - name: grant execute permission 
+     run: chmod +x gradlew
+
+   - name: Run unit tests
+     run: ./gradlew test
+
+   - name: upload artifact
+     uses: actions/upload-artifact@v4
+     with:
+      name: test result
+      path: app/build/reports/tests
+
+
+ build:
+  needs: [lint, unit-test]
+  runs-on: ubuntu-latest
+
+  steps:
+   - name: checkout the code
+     uses: actions/checkout@v4
+
+   - name: set up jdk 17
+     uses: actions/setup-java@v4
+     with:
+      java-version: '17'
+      distribution: 'temurin'
+
+   - name: cache for storage
+     uses: actions/cache@v4
+     with:
+      path: ~/.gradlew/caches
+      key: ${{runner.os}}-gradle-${{ hashfiles ('**/*gradlew*') }} 
+
+   - name: grant execute permission for gradlew
+     run: chmod +x gradlew
+
+   - name: build debug apk
+     run: ./gradlew assebleDebug
+
+   - name: upload debug apk
+     uses: actions/upload-artifact@v4
+     with:
+      name: debug-apk
+      path: app/build/outputs/apk/debug/*.apk
+    
