--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,7 +16,7 @@ jobs:
      uses: actions/checkout@v4
 
    - name: set up java jdk 17
-     uses: actions/setup-java@4
+     uses: actions/setup-java@v4
      with:
       java-version: '17'
       distribution: 'temurin'
