--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -50,7 +50,7 @@ jobs:
      uses: actions/checkout@v4
 
    - name: set up jdk 17
-     uses: actions/tamil-java@v4
+     uses: actions/setup-java@v4
      with:
       java-version: '17'
       distribution: 'temurin'
