--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -98,7 +98,7 @@ jobs:
      run: chmod +x gradlew
 
    - name: build debug apk
-     run: ./gradlew assebleDebug
+     run: ./gradlew assembleDebug
 
    - name: upload debug apk
      uses: actions/upload-artifact@v4
