--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -121,26 +121,26 @@ jobs:
        java-version: 17
        distribution: 'temurin'
 
-    - name: bump version code and name
+    - name: Bump Version Code and Name
       id: bump_version
       run: |
-        VERSION_NAME: $(git describe --tags --abbrev=0 || echo "0.0.0")
-        VERSION_CODE: $((10000 + $(git rev-list --count HEAD)))
+          VERSION_NAME=$(git describe --tags --abbrev=0 || echo "0.0.0")
+          VERSION_CODE=$((10000 + $(git rev-list --count HEAD)))
 
-        set i "s/versionCode . */versionCode $VERSION_CODE/" app/build.gradle
-        set i "s/versionName \".*\"/versionName \"$VERSION_NAME\"/" app/build.gradle
+          # Assuming versionName and versionCode are in app/build.gradle
+          sed -i "s/versionCode .*/versionCode $VERSION_CODE/" app/build.gradle
+          sed -i "s/versionName \".*\"/versionName \"$VERSION_NAME\"/" app/build.gradle
 
-        echo "version=$VERSION_NAME" >> $GITHUB_OUTPUT
-        echo "build=$VERSION_CODE" >> $GITHUB_OUTPUT
+          echo "version=$VERSION_NAME" >> $GITHUB_OUTPUT
+          echo "build=$VERSION_CODE" >> $GITHUB_OUTPUT
 
-
-    - name: commit and push version bump
+    - name: Commit and Push Version Bump
       run: |
-       git config user.name "github.actions"
-       git config user.email "github@actions.com
-       git add app/build.gradle
-       git commit -m "version bump ${{steps.bump_version.outputs.version}} (build ${{steps.bump_version.outputs.build}}) [skip ci] || echo " no changes to commit"
-       git push
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add app/build.gradle
+          git commit -m "Bump version to ${{ steps.bump_version.outputs.version }} (build ${{ steps.bump_version.outputs.build }}) [skip ci]" || echo "No changes to commit"
+          git push
 
 
     - name: Generate branch-based release notes
