--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -128,8 +128,8 @@ jobs:
           VERSION_CODE=$((10000 + $(git rev-list --count HEAD)))
 
           # Assuming versionName and versionCode are in app/build.gradle
-          sed -i "s/versionCode .*/versionCode $VERSION_CODE/" app/build.gradle.kts
-          sed -i "s/versionName \".*\"/versionName \"$VERSION_NAME\"/" app/build.gradle.kts
+          sed -i "s/versionCode .*/versionCode $VERSION_CODE/" app/build.gradle
+          sed -i "s/versionName \".*\"/versionName \"$VERSION_NAME\"/" app/build.gradle
 
           echo "version=$VERSION_NAME" >> $GITHUB_OUTPUT
           echo "build=$VERSION_CODE" >> $GITHUB_OUTPUT
@@ -141,7 +141,7 @@ jobs:
        run: |
         git config user.name "github-actions"
         git config user.email "actions@github.com"
-        git add app/build.gradle*
+        git add app/build.gradle
         git commit -m "Bump version to ${{ steps.bump_version.outputs.version }} (build ${{ steps.bump_version.outputs.build }}) [skip ci]" || echo "No changes to commit"
 
          # Use PAT for push
