--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -140,7 +140,7 @@ jobs:
       run: |
         git config user.name "github-actions"
         git config user.email "actions@github.com"
-        git add app/build.gradle
+        git add app/build.gradle.kts
         git commit -m "Bump version to ${{ steps.bump_version.outputs.version }} (build ${{ steps.bump_version.outputs.build }}) [skip ci]" || echo "No changes to commit"
         git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
         git push origin HEAD:master
