--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -136,15 +136,17 @@ jobs:
 
     - name: Commit and Push Version Bump
       env:
-        TOKEN: ${{ secrets.GH_PAT }}
+       TOKEN: ${{ secrets.GH_PAT }}
       run: |
-        git config user.name "github-actions"
-        git config user.email "actions@github.com"
-        git add app/build.gradle.kts
-        git commit -m "Bump version to ${{ steps.bump_version.outputs.version }} (build ${{ steps.bump_version.outputs.build }}) [skip ci]" || echo "No changes to commit"
-        git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
-        git push origin HEAD:master
+       git config user.name "github-actions"
+       git config user.email "actions@github.com"
+       git add app/build.gradle*
+       git commit -m "Bump version to ${{ steps.bump_version.outputs.version }} (build ${{ steps.bump_version.outputs.build }}) [skip ci]" || echo "No changes to commit"
 
+       # Authenticate using your PAT
+       git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
+    
+       git push origin HEAD:master
 
 
     - name: Generate branch-based release notes
