--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -108,6 +108,8 @@ jobs:
 
  release-version:
   needs: build
+  permissions:
+   contents: write
   runs-on: ubuntu-latest
 
   steps:
@@ -159,6 +161,12 @@ jobs:
     
       echo "version=$new_version" >> $GITHUB_OUTPUT
       echo "build=$build_number" >> $GITHUB_OUTPUT
+
+  - name: Configure Git
+    run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/tamil-tlc/ToDo-Application.git
 
   - name: Commit Version Changes
     run: |
