--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -172,7 +172,7 @@ jobs:
     run: |
       git config user.name "github-actions[bot]"
       git config user.email "github-actions[bot]@users.noreply.github.com"
-      git add app/build.gradle.kts
+      git add .
       git commit -m " Bump version to ${{ steps.bump_version.outputs.version }} (build ${{ steps.bump_version.outputs.build }}) [skip ci]" || echo "No changes"
       git push
 
